log
Thu 16 May 2024 01:31:50 AM UTC: 
 tests:  0|5
total_score: 0/70
97679de
Thu 16 May 2024 01:52:44 AM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   58 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
119aaaf
Thu 16 May 2024 01:54:34 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   64 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
fce3fa7
Thu 16 May 2024 01:54:52 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   65 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
67fe0d2
Thu 16 May 2024 01:56:19 AM UTC: 
 sudoku.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
2f91da1
Thu 16 May 2024 02:02:17 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
3796cd3
Thu 16 May 2024 02:24:02 AM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  5|3
total_score: 35/70
80bb8b3
Thu 16 May 2024 02:30:30 AM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
56d4d63
Thu 16 May 2024 02:34:17 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
f9c0726
